@@ -1,7 +1,4 @@
 <?php
-
-# Copyright (c) 2011 Robert Munteanu (robert@lmn.ro)
-
 # Zip export plugin for MantisBT is free software: 
 # you can redistribute it and/or modify it under the terms of the GNU
 # General Public License as published by the Free Software Foundation, 
