@@ -1,3 +1,3 @@
-Version: 2.10 #
+Version: 2.11 #
 Devurl: https://github.com/mantisbt-plugins/ZipExport/blob/main/version.txt #
 Location: https://github.com/mantisbt-plugins/ZipExport/archive/refs/heads/main.zip #
