@@ -1,3 +1,4 @@
 30-11-2011	version 1.0		Initial release by Robert Munteanu for Mantis version 1.2.8
 27-07-2023	version 2.0		Added compatability for version 2.x
 28-07-2023	version 2.10	Added configuration screen
+06-01-2024	version 2.11	Replaced  deprecated function print_succesful_redirect with print_header_redirect
